--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,5 +22,5 @@ nav:
   - Chapter 11 - Let LLMs Read Your Data: chapter_11.md
   - Chapter 12 - Let LLMs Act, Not Just Answer: chapter_12.md
   - Chapter 13 - GenAI Playground: chapter_13.md
-  - Capstone Project: chapter_13.md
+  - Capstone Project: capstone_project.md
   - Chapter 14 - What’s Next?: chapter_14.md
