--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,10 +17,11 @@ nav:
   - Chapter 8b - Prompting in Action: chapter_8b.md
   - Chapter 8c - Prompting Strategies: chapter_8c.md
   - Checkpoint - Project 3: project_3.md
-  - Chapter 9 - Serving Your AI: chapter_9.md
-  - Chapter 10 - Scaling, Microservices & DevOps: chapter_10.md
-  - Chapter 11 - Let LLMs Read Your Data: chapter_11.md
+  - Chapter 9 - Serve Your Model Like an Engineer: chapter_9.md
+  - Chapter 10 - Make Your Model Trustworthy: chapter_10.md
+  - Chapter 11 - Build Your First AI Microservice: chapter_11.md
   - Chapter 12 - Let LLMs Act, Not Just Answer: chapter_12.md
-  - Chapter 13 - GenAI Playground: chapter_13.md
+  - Chapter 13 - Let Your Model Think and Act: chapter_13.md
+  - Chapter 14 - GenAI Playground: chapter_14.md
   - Capstone Project: capstone_project.md
-  - Chapter 14 - What’s Next?: chapter_14.md
+  - Chapter 14 - What’s Next?: chapter_15.md
